// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserStructure should render correctly when add member modal is open 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c7 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #212121;
}

.c14 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c14:hover {
  background-color: #f44336;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c15 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c11 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c16 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c12 {
  color: #0421b1;
  max-width: 190px;
}

.c17 {
  color: #212121;
  max-width: 190px;
}

.c18 {
  font-weight: normal;
  font-size: 32px;
  line-height: 40px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 8px;
}

.c19 {
  background: #2d9cdb;
  border-radius: 12px;
  padding: 16px;
  margin-top: 15px;
  font-style: normal;
  font-size: 16px;
  line-height: 20px;
  color: #ffffff;
  margin-bottom: 15px;
}

.c3 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1 container"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="btn  dark  "
        href="/annuaire/structureId"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Voir dans l'annuaire
      </a>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            Membres
          </div>
          <div
            className="c8"
          >
            2
          </div>
          <div
            className="c7"
          >
            
          </div>
        </div>
        <div>
          <button
            className="btn  dark  "
            onClick={[Function]}
            testID="test-add-member"
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="person-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c13"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c14"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c15"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c16"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c13"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c14"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div
        className="c18"
      >
        Ajouter un membre
      </div>
      <div
        className="c19"
      >
        <b>
          Attention :
        </b>
         assurez-vous que la personne que vous souhaitez ajouter a déjà créé un compte sur réfugiés.info.
      </div>
      <div>
        <div
          className="input mb-10 input-group"
        >
          <input
            autoFocus={true}
            className="  new_size  form-control"
            id="value"
            onChange={[Function]}
            style={Object {}}
            type="text"
            value=""
          />
          <div
            className="append input-group-append"
          >
            <span>
              <i
                data-eva="search-outline"
                data-eva-fill="#212121"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
          </div>
        </div>
        
      </div>
      <div
        className="c20"
      >
        <button
          className="btn  outline-black mr-8 "
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="close-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Annuler
        </button>
        <button
          className="btn  validate  "
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Ajouter
        </button>
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`UserStructure should render correctly when edit member modal is open, select respo and validate 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c7 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #212121;
}

.c14 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c14:hover {
  background-color: #f44336;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c15 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c11 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c16 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c12 {
  color: #0421b1;
  max-width: 190px;
}

.c17 {
  color: #212121;
  max-width: 190px;
}

.c21 {
  background: #E0E0E0;
  border-width: 1px;
  border-style: solid;
  border-color: #212121;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #212121;
}

.c24 {
  background: #ffffff;
  border-width: 1px;
  border-style: solid;
  border-color: #212121;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #212121;
}

.c23 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 10px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  font-weight: normal;
  font-size: 32px;
  line-height: 40px;
  margin-right: 15px;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 12px;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

.c20 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
}

.c3 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1 container"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="btn  dark  "
        href="/annuaire/structureId"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Voir dans l'annuaire
      </a>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            Membres
          </div>
          <div
            className="c8"
          >
            2
          </div>
          <div
            className="c7"
          >
            
          </div>
        </div>
        <div>
          <button
            className="btn  dark  "
            onClick={[Function]}
            testID="test-add-member"
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="person-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c13"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c14"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c15"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c16"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c13"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c14"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div />
    <div>
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          Modifier le rôle de
        </div>
        <div
          className="c20"
        >
          membre1
        </div>
      </div>
      <div
        className="c21"
        onClick={[Function]}
      >
        <div
          className="c22"
        >
          <div
            className="c23"
          >
            Nommer « rédacteur » 
          </div>
          <span>
            <i
              data-eva="radio-button-on"
              data-eva-fill="#212121"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
      </div>
      <div
        className="c24"
        onClick={[Function]}
      >
        <div
          className="c22"
        >
          <div
            className="c23"
          >
            Nommer « responsable »
          </div>
          <span>
            <i
              data-eva="radio-button-off"
              data-eva-fill="#212121"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
        <span>
          + Ajouter ou supprimer d'autres membres
          <br />
        </span>
        <span>
          + Nommer d'autres responsables
          <br />
        </span>
      </div>
      <div
        className="c25"
      >
        <button
          className="btn  outline-black mr-8 "
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="close-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Annuler
        </button>
        <button
          className="btn  validate  "
          disabled={true}
          onClick={[Function]}
          testID="test-validate-edit"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Valider
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when edit member modal is open, select respo and validate 2`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c7 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #212121;
}

.c14 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c14:hover {
  background-color: #f44336;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c15 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c11 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c16 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c12 {
  color: #0421b1;
  max-width: 190px;
}

.c17 {
  color: #212121;
  max-width: 190px;
}

.c21 {
  background: #ffffff;
  border-width: 1px;
  border-style: solid;
  border-color: #212121;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #212121;
}

.c24 {
  background: #2d9cdb;
  border-width: 1px;
  border-style: solid;
  border-color: #2d9cdb;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #ffffff;
}

.c23 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 10px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  font-weight: normal;
  font-size: 32px;
  line-height: 40px;
  margin-right: 15px;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 12px;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

.c20 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
}

.c3 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1 container"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="btn  dark  "
        href="/annuaire/structureId"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Voir dans l'annuaire
      </a>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            Membres
          </div>
          <div
            className="c8"
          >
            2
          </div>
          <div
            className="c7"
          >
            
          </div>
        </div>
        <div>
          <button
            className="btn  dark  "
            onClick={[Function]}
            testID="test-add-member"
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="person-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c13"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c14"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c15"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c16"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c13"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c14"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div />
    <div>
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          Modifier le rôle de
        </div>
        <div
          className="c20"
        >
          membre1
        </div>
      </div>
      <div
        className="c21"
        onClick={[Function]}
      >
        <div
          className="c22"
        >
          <div
            className="c23"
          >
            Nommer « rédacteur » 
          </div>
          <span>
            <i
              data-eva="radio-button-off"
              data-eva-fill="#212121"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
      </div>
      <div
        className="c24"
        onClick={[Function]}
      >
        <div
          className="c22"
        >
          <div
            className="c23"
          >
            Nommer « responsable »
          </div>
          <span>
            <i
              data-eva="radio-button-on"
              data-eva-fill="#ffffff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
        <span>
          + Ajouter ou supprimer d'autres membres
          <br />
        </span>
        <span>
          + Nommer d'autres responsables
          <br />
        </span>
      </div>
      <div
        className="c25"
      >
        <button
          className="btn  outline-black mr-8 "
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="close-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Annuler
        </button>
        <button
          className="btn  validate  "
          disabled={false}
          onClick={[Function]}
          testID="test-validate-edit"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Valider
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when loading 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c6 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c3 {
  width: 160px;
  height: 160px;
  background-color: #ffffff;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
      <div
        className="css-nitgap-SkeletonTheme"
      >
        <span>
          <span
            className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 20,
                "width": 160,
              }
            }
          >
            ‌
          </span>
        </span>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          Membres
        </div>
        <div
          className="c7"
        >
          ...
        </div>
        <div
          className="c6"
        >
          
        </div>
      </div>
      <div
        className="css-nitgap-SkeletonTheme"
      >
        <span>
          <span
            className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 50,
                "width": 700,
              }
            }
          >
            ‌
          </span>
        </span>
      </div>
      <div
        className="css-nitgap-SkeletonTheme"
      >
        <span>
          <span
            className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 50,
                "width": 700,
              }
            }
          >
            ‌
          </span>
        </span>
      </div>
      <div
        className="css-nitgap-SkeletonTheme"
      >
        <span>
          <span
            className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 50,
                "width": 700,
              }
            }
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when no structure 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  margin-top: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  color: #f44336;
  margin-top: 60px;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Une erreur est survenue. Veuillez recharger la page ou contacter l'équipe de réfugiés.info via le live chat en bas à droite de votre écran.
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when structure with membres when user is redacteur 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c7 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c13 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c11 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c14 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c12 {
  color: #0421b1;
  max-width: 190px;
}

.c15 {
  color: #212121;
  max-width: 190px;
}

.c3 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1 container"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="btn  dark  "
        href="/annuaire/structureId"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Voir dans l'annuaire
      </a>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            Membres
          </div>
          <div
            className="c8"
          >
            2
          </div>
          <div
            className="c7"
          >
            
          </div>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c13"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c15"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c15"
                >
                  Non disponible
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when structure with membres when user is respo 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c7 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #212121;
}

.c14 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c14:hover {
  background-color: #f44336;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c15 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c11 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c16 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c12 {
  color: #0421b1;
  max-width: 190px;
}

.c17 {
  color: #212121;
  max-width: 190px;
}

.c3 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1 container"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="btn  dark  "
        href="/annuaire/structureId"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Voir dans l'annuaire
      </a>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            Membres
          </div>
          <div
            className="c8"
          >
            2
          </div>
          <div
            className="c7"
          >
            
          </div>
        </div>
        <div>
          <button
            className="btn  dark  "
            onClick={[Function]}
            testID="test-add-member"
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="person-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c10"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c12"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c13"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c14"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c15"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c16"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c13"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c14"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div />
    <div />
  </div>
</div>
`;
